// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article list 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <Pagination
            hideResults={false}
            pageSize={10}
          />
        </div>
      </div>
    </div>
    <div
      accessibility-label="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
      id="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
    >
      <div>
        <Link
          url="https://article1.io"
        >
          <div>
            <Card
              image={
                Object {
                  "uri": "https://lead1.io",
                }
              }
              imageRatio={1}
              imageSize={1440}
              showImage={true}
            >
              <div>
                <div>
                  <div>
                    LABEL 1
                  </div>
                </div>
                <h3
                  aria-level="3"
                  role="heading"
                >
                  Headline 1
                </h3>
                <div>
                  <span>
                    
                    Summary 1
                    ...
                  </span>
                </div>
                <div>
                  Friday November 17 2017, 12:01am, The Times
                </div>
              </div>
            </Card>
          </div>
        </Link>
      </div>
    </div>
    <div
      accessibility-label="4e6894ec-cb18-11e7-b529-95e3fc05f40f.1"
      id="4e6894ec-cb18-11e7-b529-95e3fc05f40f.1"
    >
      <div>
        <div>
          <div />
        </div>
        <Link
          url="https://article2.io"
        >
          <div>
            <Card
              image={
                Object {
                  "uri": "https://lead2.io",
                }
              }
              imageRatio={1}
              imageSize={1440}
              showImage={true}
            >
              <div>
                <div>
                  <div>
                    LABEL 2
                  </div>
                </div>
                <h3
                  aria-level="3"
                  role="heading"
                >
                  Headline 2
                </h3>
                <div>
                  <span>
                    
                    Summary 2
                    ...
                  </span>
                </div>
                <div>
                  Friday November 17 2017, 12:01am, The Sunday Times
                </div>
                <div>
                  <p>
                    Byline 2
                  </p>
                </div>
              </div>
            </Card>
          </div>
        </Link>
      </div>
    </div>
    <div
      accessibility-label="ca003c2a-8e6f-11e8-9eb6-529269fb1459.2"
      id="ca003c2a-8e6f-11e8-9eb6-529269fb1459.2"
    >
      <div>
        <div>
          <div />
        </div>
        <Link
          url="https://article3.io"
        >
          <div>
            <Card
              image={
                Object {
                  "uri": "https://lead3.io",
                }
              }
              imageRatio={1}
              imageSize={1440}
              showImage={true}
            >
              <div>
                <div>
                  <div>
                    LABEL 3
                  </div>
                </div>
                <h3
                  aria-level="3"
                  role="heading"
                >
                  Headline 3
                </h3>
                <div>
                  <span>
                    
                    Summary 3
                    ...
                  </span>
                </div>
                <div>
                  Friday November 17 2017, 12:01am, The Sunday Times
                </div>
                <div>
                  <p>
                    Byline 3
                  </p>
                </div>
              </div>
            </Card>
          </div>
        </Link>
      </div>
    </div>
    <div
      accessibility-label="ca003fe0-8e6f-11e8-9eb6-529269fb1459.3"
      id="ca003fe0-8e6f-11e8-9eb6-529269fb1459.3"
    >
      <div>
        <div>
          <div />
        </div>
        <Link
          url="https://article4.io"
        >
          <div>
            <Card
              image={
                Object {
                  "uri": "https://lead4.io",
                }
              }
              imageRatio={1}
              imageSize={1440}
              showImage={true}
            >
              <div>
                <div>
                  <div>
                    LABEL 4
                  </div>
                </div>
                <h3
                  aria-level="3"
                  role="heading"
                >
                  Headline 4
                </h3>
                <div>
                  <span>
                    
                    Summary 4
                    ...
                  </span>
                </div>
                <div>
                  Friday November 17 2017, 12:01am, The Sunday Times
                </div>
                <div>
                  <p>
                    Byline 4
                  </p>
                </div>
              </div>
            </Card>
          </div>
        </Link>
      </div>
    </div>
    <div
      accessibility-label="ca00422e-8e6f-11e8-9eb6-529269fb1459.4"
      id="ca00422e-8e6f-11e8-9eb6-529269fb1459.4"
    >
      <div>
        <div>
          <div />
        </div>
        <Link
          url="https://article5.io"
        >
          <div>
            <Card
              image={
                Object {
                  "uri": "https://lead5.io",
                }
              }
              imageRatio={1}
              imageSize={1440}
              showImage={true}
            >
              <div>
                <div>
                  <div>
                    LABEL 5
                  </div>
                </div>
                <h3
                  aria-level="3"
                  role="heading"
                >
                  Headline 5
                </h3>
                <div>
                  <span>
                    
                    Summary 5
                    ...
                  </span>
                </div>
                <div>
                  Friday November 17 2017, 12:01am, The Sunday Times
                </div>
                <div>
                  <p>
                    Byline 5
                  </p>
                </div>
              </div>
            </Card>
          </div>
        </Link>
      </div>
    </div>
    <div>
      <div>
        <div />
        <div>
          <div>
            <div>
              <Watermark
                height={250}
                viewBox="-630 120 1200 50"
                width={970}
              />
            </div>
            <div>
              ADVERTISEMENT
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div>
        <Pagination
          hideResults={true}
          pageSize={10}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`2. article list with no images 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <Pagination
            hideResults={false}
            pageSize={3}
          />
        </div>
      </div>
    </div>
    <div
      accessibility-label="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
      id="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
    >
      <div>
        <Link
          url="https://article1.io"
        >
          <div>
            <Card
              image={
                Object {
                  "uri": "https://lead1.io",
                }
              }
              imageRatio={1}
              imageSize={1440}
              showImage={false}
            >
              <div>
                <div>
                  <div>
                    <div>
                      LABEL 1
                    </div>
                  </div>
                  <h3
                    aria-level="3"
                    role="heading"
                  >
                    Headline 1
                  </h3>
                  <div>
                    Friday November 17 2017, 12:01am, The Times
                  </div>
                </div>
              </div>
              <div>
                <div>
                  <div>
                    <div>
                      LABEL 1
                    </div>
                  </div>
                  <h3
                    aria-level="3"
                    role="heading"
                  >
                    Headline 1
                  </h3>
                  <div>
                    <span>
                      
                      Short summary 1
                      ...
                    </span>
                  </div>
                  <div>
                    Friday November 17 2017, 12:01am, The Times
                  </div>
                </div>
              </div>
            </Card>
          </div>
        </Link>
      </div>
    </div>
    <div>
      <div>
        <Pagination
          hideResults={true}
          pageSize={3}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`3. article list with missing image 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <Pagination
            hideResults={false}
            pageSize={3}
          />
        </div>
      </div>
    </div>
    <div
      accessibility-label="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
      id="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
    >
      <div>
        <Link
          url="https://article1.io"
        >
          <div>
            <Card
              image={null}
              imageRatio={1}
              imageSize={1440}
              showImage={false}
            >
              <div>
                <div>
                  <div>
                    <div>
                      LABEL 1
                    </div>
                  </div>
                  <h3
                    aria-level="3"
                    role="heading"
                  >
                    Headline 1
                  </h3>
                  <div>
                    Friday November 17 2017, 12:01am, The Times
                  </div>
                </div>
              </div>
              <div>
                <div>
                  <div>
                    <div>
                      LABEL 1
                    </div>
                  </div>
                  <h3
                    aria-level="3"
                    role="heading"
                  >
                    Headline 1
                  </h3>
                  <div>
                    <span>
                      
                      Short summary 1
                      ...
                    </span>
                  </div>
                  <div>
                    Friday November 17 2017, 12:01am, The Times
                  </div>
                </div>
              </div>
            </Card>
          </div>
        </Link>
      </div>
    </div>
    <div>
      <div>
        <Pagination
          hideResults={true}
          pageSize={3}
        />
      </div>
    </div>
  </div>
</div>
`;
